Improved Game component performance to avoid unnecessary re-renders.
fixed: corner case with canPlaceCard not detecting if the defender doesn't have enough cards to cover the current table top.
fixed: prevent an attacker who cannot attack currently from placing cards.
fixed: more intelligent player deck updating so it doesn't overload the players order.
fixed: crash on game start with undefined game prop.

- improve lobby error handling when a new user tries to join for a full or in progress lobby.
- re-organised game state to be contained within the 'game' object.

--- a/src/routes/Lobby/Game/Player/index.module.scss
+++ b/src/routes/Lobby/Game/Player/index.module.scss
@@ -21,6 +21,10 @@
     background: #1a1d3d;
     border: 2px white solid;
 
+    &.Starting {
+      border: 2px red solid;
+    }
+
     &.Turned {
       border: 2px green solid;
     }
